integration fosuser hwi bundle and fix assets

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,39 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% if app.environment == 'prod' %}
+            {% stylesheets '../app/Resources/public/css/min.css' filter='cssrewrite' %}
+            <link rel="stylesheet" href="{{ asset_url }}"/>
+            {% endstylesheets %}
+        {% else %}
+            {% stylesheets '../app/Resources/public/css/app.css' filter='cssrewrite' %}
+            <link rel="stylesheet" href="{{ asset_url }}"/>
+            {% endstylesheets %}
+        {% endif %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            {% if app.environment == 'prod' %}
+            {% javascripts '../app/Resources/public/js/min.js' %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+            {% else %}
+            {% javascripts
+                '../app/Resources/public/js/vendor/jquery.min.js'
+                '../app/Resources/public/js/vendor/modernizr.js'
+                '../app/Resources/public/js/app.js'
+                '../app/Resources/public/js/vendor/foundation.min.js'
+                '../app/Resources/public/js/vendor/foundation.topbar.js'
+                '../app/Resources/public/js/vendor/owl.carousel.min.js'
+            %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+            {% endif %}
+            <script>
+                $(document).foundation();
+            </script>
+        {% endblock %}
     </body>
 </html>
