--- a/app/Resources/public/scss/app.scss
+++ b/app/Resources/public/scss/app.scss
@@ -527,3 +527,11 @@ div.owl-wrapper-outer {
     position: relative;
     z-index: 99;
 }
+
+
+
+/***************************** contact ******************************/
+
+div.panel.contact{
+    min-height: 400px;
+}
