--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -25,7 +25,7 @@
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a class="" href="#">
+                        <a class="" href="{{ path('app_contact') }}">
                             <span class="icon-medium icon-address-book vertical-middle"></span>
                             {{ 'views.navbar.contact'|trans }}
                         </a>
