--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -4,7 +4,7 @@
             <h4>{{ 'views.navbar.plus'|trans }}</h4>
             <ul class="footer-links">
                 <li>
-                    <a href="#">
+                    <a href="{{ path('app_contact') }}">
                         {{ 'views.navbar.contact'|trans }}
                     </a>
                 </li>
