reviews mention cdgv about text

--- a/app/Resources/AppBundle/views/App/mention.html.twig
+++ b/app/Resources/AppBundle/views/App/mention.html.twig
@@ -13,5 +13,20 @@
             </h1>
         </div>
     </div>
+    <div class="row">
+        <div class="small-10 small-centered columns">
+            <ul class="small-block-grid-1">
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.mention.subheading1'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.mention.paragraph1'|trans|raw }}
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
 
 {% endblock page %}
