--- a/app/Resources/AppBundle/views/App/termsandconditions.html.twig
+++ b/app/Resources/AppBundle/views/App/termsandconditions.html.twig
@@ -14,4 +14,93 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="small-10 small-centered columns">
+            <ul class="small-block-grid-1">
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading1'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph1'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading2'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph2'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading3'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph3'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading4'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph4'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading5'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph5'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading6'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph6'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading7'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph7'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading8'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph8'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.termsandconditions.subheading9'|trans }}
+                    </h2>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.termsandconditions.paragraph9'|trans|raw }}
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
 {% endblock page %}
