add picture fix css small

--- a/app/Resources/AppBundle/views/App/about.html.twig
+++ b/app/Resources/AppBundle/views/App/about.html.twig
@@ -21,6 +21,10 @@
                         {{ 'views.app.about.subheading1'|trans }}
                     </h2>
 
+                    <p>
+                        <img class="" src="{{ asset('bundles/app/images/Cercle-de-Buren.png') }}" />
+                    </p>
+
                     <p class="parahome nomargin">
                         {{ 'views.app.about.paragraph1'|trans|raw }}
                     </p>
@@ -30,18 +34,38 @@
                         {{ 'views.app.about.subheading2'|trans }}
                     </h2>
 
+                    <p>
+                        <img class="" src="{{ asset('bundles/app/images/Detecteur-crepusculaire.png') }}" />
+                    </p>
+
                     <p class="parahome nomargin">
                         {{ 'views.app.about.paragraph2'|trans|raw }}
                     </p>
-                </li>
                 </li>
                 <li class="homebox text-center">
                     <h2>
                         {{ 'views.app.about.subheading3'|trans }}
                     </h2>
 
+                    <p>
+                        <img class="" src="{{ asset('bundles/app/images/Les-clients.png') }}" />
+                    </p>
+
                     <p class="parahome nomargin">
                         {{ 'views.app.about.paragraph3'|trans|raw }}
+                    </p>
+                </li>
+                <li class="homebox text-center">
+                    <h2>
+                        {{ 'views.app.about.subheading4'|trans }}
+                    </h2>
+
+                    <p>
+                        <img class="" src="{{ asset('bundles/app/images/Equipe-Feel.png') }}" />
+                    </p>
+
+                    <p class="parahome nomargin">
+                        {{ 'views.app.about.paragraph4'|trans|raw }}
                     </p>
                 </li>
             </ul>
