--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <title>{% block title %}Welcome!{% endblock title %}</title>
+    <meta name="description" content="{% block metadescription %}{% endblock metadescription %}" />
     {% if app.environment == 'prod' %}
         {% stylesheets '../app/Resources/public/css/min.css' filter='cssrewrite' %}
         <link rel="stylesheet" href="{{ asset_url }}"/>
