fix views delphine

--- a/app/Resources/AppBundle/views/App/about.html.twig
+++ b/app/Resources/AppBundle/views/App/about.html.twig
@@ -21,12 +21,16 @@
                         {{ 'views.app.about.subheading1'|trans }}
                     </h2>
 
-                    <p>
+                    <p class="parahome nomargin">
+                        {{ 'views.app.about.paragraph1-1'|trans|raw }}
+                    </p>
+
+                    <p class="nomargin">
                         <img class="" src="{{ asset('bundles/app/images/Cercle-de-Buren.png') }}" />
                     </p>
 
                     <p class="parahome nomargin">
-                        {{ 'views.app.about.paragraph1'|trans|raw }}
+                        {{ 'views.app.about.paragraph1-2'|trans|raw }}
                     </p>
                 </li>
                 <li class="homebox text-center">
@@ -34,13 +38,18 @@
                         {{ 'views.app.about.subheading2'|trans }}
                     </h2>
 
-                    <p>
-                        <img class="" src="{{ asset('bundles/app/images/Detecteur-crepusculaire.png') }}" />
+                    <p class="parahome nomargin">
+                        {{ 'views.app.about.paragraph2-1'|trans|raw }}
                     </p>
 
                     <p class="parahome nomargin">
-                        {{ 'views.app.about.paragraph2'|trans|raw }}
+                        {{ 'views.app.about.paragraph2-2'|trans|raw }}
                     </p>
+
+                    <p class="nomargin">
+                        <img class="" src="{{ asset('bundles/app/images/Detecteur-crepusculaire.png') }}" />
+                    </p>
+
                 </li>
                 <li class="homebox text-center">
                     <h2>
