--- a/app/Resources/public/scss/_settings.scss
+++ b/app/Resources/public/scss/_settings.scss
@@ -19,16 +19,16 @@ $lightblue: #afbde1;
 $lightgrey: #F2F2F2;
 
 .bgblue{
-    color: $blue !important;
+    background: $blue !important;
 }
 .bglightblue{
-    color: $lightblue !important;
+    background: $lightblue !important;
 }
 .bgdarkstyle{
-    color: $darkblue !important;
+    background: $darkblue !important;
 }
 .bgdarkgrey{
-    color: $darkgrey !important;
+    background: $darkgrey !important;
 }
 
 
