--- a/src/AppBundle/Resources/views/App/email.txt.twig
+++ b/src/AppBundle/Resources/views/App/email.txt.twig
@@ -1,10 +1,8 @@
-Nom du contact : {{ name }}
+Nom du contact : {{ username }}
 
 Email du contact : {{ email }}
-
-Type de demande : {{ category }}
 
 Demande :
 {{ text }}
 
-
+http://www.Feel-Lighting.fr
