--- a/app/Resources/AppBundle/views/App/contact.html.twig
+++ b/app/Resources/AppBundle/views/App/contact.html.twig
@@ -16,13 +16,24 @@
 
     <div class="row">
         <div class="medium-6 columns panel contact">
-            <h2 class="headertitle text-center">
-                {{ 'views.app.contact.title1'|trans }}
-            </h2>
+            {% if is_granted('ROLE_USER') %}
+                <h2 class="headertitle text-center">
+                    {{ 'views.app.contact.title1'|trans }}
+                </h2>
 
-            <p>
-                {{ form(form) }}
-            </p>
+                <p>
+                    {{ form(form) }}
+                </p>
+            {% else %}
+                <h2 class="headertitle text-center">
+                    {{ 'views.app.contact.needlogin'|trans }}
+                </h2>
+                <h3 class="text-center">
+                    <a href="{{ path('hwi_oauth_connect') }}" class="tiny button">
+                        {{ 'views.app.contact.login'|trans }}
+                    </a>
+                </h3>
+            {% endif %}
         </div>
         <div class="medium-6 columns panel contact">
             <h2 class="headertitle text-center">
