--- a/app/Resources/ZIMZIMCategoryProductBundle/views/ItemHome/indexpublic.html.twig
+++ b/app/Resources/ZIMZIMCategoryProductBundle/views/ItemHome/indexpublic.html.twig
@@ -9,6 +9,8 @@
     <div class="row">
         <div class="small-12 columns">
             <h1 class="headertitle text-center">
+                <img src="{{ asset('bundles/app/images/feel-lighting-expert-francais-de-la-led.png') }}" class="imageheadertitle"/>
+                &nbsp;&nbsp;
                 {{ 'views.itemhome.index.title'|trans }}
             </h1>
         </div>
