--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -38,7 +38,7 @@
             </a>
             <ul class="footer-links">
                 <li>
-                    <a href="{{ path('fos_user_security_login') }}">
+                    <a href="{{ path('hwi_oauth_connect') }}" class="">
                         {{ 'views.navbar.clientspace'|trans }}
                     </a>
                 </li>
