--- a/app/Resources/public/scss/_icoonmoon.scss
+++ b/app/Resources/public/scss/_icoonmoon.scss
@@ -11,90 +11,130 @@
     font-size: 1rem;
 }
 @font-face {
-    font-family: 'icomoon';
-    src:url('/fonts/icomoon.eot?-yb03qg');
-    src:url('/fonts/icomoon.eot?#iefix-yb03qg') format('embedded-opentype'),
-    url('/fonts/icomoon.woff?-yb03qg') format('woff'),
-    url('/fonts/icomoon.ttf?-yb03qg') format('truetype'),
-    url('/fonts/icomoon.svg?-yb03qg#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'icomoon';
+  src:url('/fonts/icomoon.eot?-pvitug');
+  src:url('/fonts/icomoon.eot?#iefix-pvitug') format('embedded-opentype'),
+  url('/fonts/icomoon.woff?-pvitug') format('woff'),
+  url('/fonts/icomoon.ttf?-pvitug') format('truetype'),
+  url('/fonts/icomoon.svg?-pvitug#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-    font-family: 'icomoon';
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-home:before {
-    content: "\e600";
+  content: "\e600";
 }
+
 .icon-pencil:before {
-    content: "\e601";
+  content: "\e601";
 }
+
+.icon-camera:before {
+  content: "\e615";
+}
+
 .icon-podcast:before {
-    content: "\e610";
+  content: "\e610";
 }
+
 .icon-file:before {
-    content: "\e602";
+  content: "\e602";
 }
+
+.icon-profile:before {
+  content: "\e616";
+}
+
 .icon-phone:before {
-    content: "\e603";
+  content: "\e603";
 }
+
 .icon-address-book:before {
-    content: "\e604";
+  content: "\e604";
 }
+
 .icon-envelope:before {
-    content: "\e605";
+  content: "\e605";
 }
+
 .icon-forward:before {
-    content: "\e606";
+  content: "\e606";
 }
+
 .icon-reply:before {
-    content: "\e607";
+  content: "\e607";
 }
+
 .icon-cog:before {
-    content: "\e611";
+  content: "\e611";
 }
+
+.icon-cogs:before {
+  content: "\e617";
+}
+
 .icon-remove:before {
-    content: "\e608";
+  content: "\e608";
 }
+
 .icon-earth:before {
-    content: "\e612";
+  content: "\e612";
 }
+
 .icon-flag:before {
-    content: "\e613";
+  content: "\e613";
 }
+
 .icon-eye:before {
-    content: "\e614";
+  content: "\e614";
 }
+
 .icon-close:before {
-    content: "\e609";
+  content: "\e609";
 }
+
 .icon-checkmark:before {
-    content: "\e60a";
+  content: "\e60a";
 }
+
 .icon-minus:before {
-    content: "\e60b";
+  content: "\e60b";
 }
+
 .icon-plus:before {
-    content: "\e60c";
+  content: "\e60c";
 }
+
+.icon-arrow-right:before {
+  content: "\e618";
+}
+
+.icon-arrow-left:before {
+  content: "\e619";
+}
+
 .icon-googleplus:before {
-    content: "\e60d";
+  content: "\e60d";
 }
+
 .icon-facebook:before {
-    content: "\e60e";
+  content: "\e60e";
 }
+
 .icon-twitter:before {
-    content: "\e60f";
+  content: "\e60f";
 }
